remove signal peptide, help sonarqube

--- a/GoodGUI/GoodGUI.csproj
+++ b/GoodGUI/GoodGUI.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
+      <SonarQubeExclude>true</SonarQubeExclude>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
