--- a/FragmentGeneration/FragmentGeneration.csproj
+++ b/FragmentGeneration/FragmentGeneration.csproj
@@ -98,7 +98,9 @@
     <Compile Include="NewPsmWithFDR.cs" />
     <Compile Include="OkBin.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+         <SonarQubeExclude>true</SonarQubeExclude>
+    </Compile>
     <Compile Include="PSMwithPeptide.cs" />
     <Compile Include="SearchEngine.cs" />
     <Compile Include="SearchMode.cs" />
