--- a/MetaMorpheus/MetaMorpheus.csproj
+++ b/MetaMorpheus/MetaMorpheus.csproj
@@ -81,7 +81,9 @@
     <Compile Include="ProductType.cs" />
     <Compile Include="ProductTypes.cs" />
     <Compile Include="ProgressEventArgs.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+         <SonarQubeExclude>true</SonarQubeExclude>
+    </Compile>
     <Compile Include="Protease.cs" />
     <Compile Include="ProteaseDictionary.cs" />
     <Compile Include="Protein.cs" />
