--- a/mzCalIO/mzCalIO.csproj
+++ b/mzCalIO/mzCalIO.csproj
@@ -90,7 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+         <SonarQubeExclude>true</SonarQubeExclude>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
