--- a/Test/packages.config
+++ b/Test/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MathNet.Numerics" version="3.15.0" targetFramework="net451" />
+  <package id="mzLib" version="1.0.44" targetFramework="net451" />
   <package id="NUnit" version="3.5.0" targetFramework="net451" />
   <package id="NUnit3TestAdapter" version="3.6.0" targetFramework="net451" />
+  <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
