--- a/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
+++ b/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
@@ -87,7 +87,9 @@
     <Compile Include="NewPsm.cs" />
     <Compile Include="NewPsmWithFDR.cs" />
     <Compile Include="OkBin.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <SonarQubeExclude>true</SonarQubeExclude>
+    </Compile>
     <Compile Include="PSMwithPeptide.cs" />
     <Compile Include="SearchEngine.cs" />
     <Compile Include="SearchMode.cs" />
