--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -90,7 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalysisEngineTest.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="ExclusionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetUpTests.cs" />
   </ItemGroup>
