--- a/mzCalIO/mzCalIO.csproj
+++ b/mzCalIO/mzCalIO.csproj
@@ -39,32 +39,32 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Chemistry, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\Chemistry.dll</HintPath>
+    <Reference Include="Chemistry, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\Chemistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MassSpectrometry, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\MassSpectrometry.dll</HintPath>
+    <Reference Include="MassSpectrometry, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\MassSpectrometry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MathNet.Numerics, Version=3.15.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathNet.Numerics.3.15.0\lib\net40\MathNet.Numerics.dll</HintPath>
+    <Reference Include="MathNet.Numerics, Version=3.16.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.3.16.0\lib\net40\MathNet.Numerics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="mzIdentML, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\mzIdentML.dll</HintPath>
+    <Reference Include="mzIdentML, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\mzIdentML.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MzML, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\MzML.dll</HintPath>
+    <Reference Include="MzML, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\MzML.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Proteomics, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\Proteomics.dll</HintPath>
+    <Reference Include="Proteomics, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\Proteomics.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Spectra, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\Spectra.dll</HintPath>
+    <Reference Include="Spectra, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\Spectra.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -76,12 +76,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thermo, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\Thermo.dll</HintPath>
+    <Reference Include="Thermo, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\Thermo.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="UsefulProteomicsDatabases, Version=1.0.44.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\mzLib.1.0.44\lib\UsefulProteomicsDatabases.dll</HintPath>
+    <Reference Include="UsefulProteomicsDatabases, Version=1.0.47.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\mzLib.1.0.47\lib\UsefulProteomicsDatabases.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -104,6 +104,10 @@
     <ProjectReference Include="..\..\MetaMorpheus\MetaMorpheus\MetaMorpheus.csproj">
       <Project>{D2178D2E-7CBD-48A3-835D-8B13872202FF}</Project>
       <Name>MetaMorpheus</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IndexSearchAndAnalyze\IndexSearchAndAnalyze.csproj">
+      <Project>{04B0EE7D-5FD3-47A5-ABAA-658D177E4229}</Project>
+      <Name>IndexSearchAndAnalyze</Name>
     </ProjectReference>
     <ProjectReference Include="..\mzCal\mzCal.csproj">
       <Project>{475c3b7b-4367-4bc8-8192-2a850c72812b}</Project>
