--- a/GoodGUI/GoodGUI.csproj
+++ b/GoodGUI/GoodGUI.csproj
@@ -97,30 +97,29 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AllTasksClass.cs" />
-    <Compile Include="GPTMDTaskWindow.xaml.cs">
-      <DependentUpon>GPTMDTaskWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GPTMD.cs" />
-    <Compile Include="GPTMDParamsObject.cs" />
-    <Compile Include="GptmdPTMlist.cs" />
-    <Compile Include="Handlers.cs" />
-    <Compile Include="MyGPTMDtask.cs" />
-    <Compile Include="MyCalibrateTask.cs" />
-    <Compile Include="MySearchTask.cs" />
-    <Compile Include="MyTask.cs" />
-    <Compile Include="AllTasksParams.cs" />
-    <Compile Include="SearchParamsObject.cs" />
     <Compile Include="CalibrateTaskWindow.xaml.cs">
       <DependentUpon>CalibrateTaskWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FinishedFile.cs" />
+    <Compile Include="GPTMD.cs" />
+    <Compile Include="GPTMDParamsObject.cs" />
+    <Compile Include="GptmdPTMlist.cs" />
+    <Compile Include="GPTMDTaskWindow.xaml.cs">
+      <DependentUpon>GPTMDTaskWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Handlers.cs" />
+    <Compile Include="SearchParamsObject.cs" />
     <Compile Include="SearchTaskWindow.xaml.cs">
       <DependentUpon>SearchTaskWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SingleTaskEventArgs.cs" />
     <Compile Include="TaskListWrapper.cs" />
-    <Page Include="GPTMDTaskWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="CalibrateTaskWindow.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GPTMDTaskWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -134,10 +133,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="CalibrateTaskWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="SearchTaskWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
