--- a/IndexSearchAndAnalyze/packages.config
+++ b/IndexSearchAndAnalyze/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="MathNet.Numerics" version="3.16.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.47" targetFramework="net451" />
+  <package id="NetSerializer" version="4.1.0" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
