--- a/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
+++ b/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -127,10 +127,12 @@
     <Compile Include="MyResults.cs" />
     <Compile Include="MySearchTask.cs" />
     <Compile Include="MyTask.cs" />
+    <Compile Include="MyTaskResults.cs" />
     <Compile Include="MyTasksEnum.cs" />
     <Compile Include="NewPsm.cs" />
     <Compile Include="NewPsmWithFDR.cs" />
     <Compile Include="Internals\OkBin.cs" />
+    <Compile Include="ParentSpectrumMatch.cs" />
     <Compile Include="ProgressEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
