--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -95,7 +95,9 @@
     <Compile Include="SetUpTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FragmentGeneration\FragmentGeneration.csproj">
