--- a/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
+++ b/IndexSearchAndAnalyze/IndexSearchAndAnalyze.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Indices.cs" />
     <Compile Include="Internals\MyAnalysisClass.cs" />
     <Compile Include="ClassicSearchEngine.cs" />
+    <Compile Include="DotSearchMode.cs" />
     <Compile Include="IntervalSearchMode.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="LocalMs2Scan.cs" />
@@ -143,6 +144,7 @@
     <Compile Include="SearchMode.cs" />
     <Compile Include="ModernSearchParams.cs" />
     <Compile Include="ModernSearchResults.cs" />
+    <Compile Include="SearchModeForDisplay.cs" />
     <Compile Include="SingleFileEventArgs.cs" />
     <Compile Include="SingleTaskEventArgs.cs" />
     <Compile Include="SoftwareLockMassParams.cs" />
