--- a/InternalLogic/InternalLogic.csproj
+++ b/InternalLogic/InternalLogic.csproj
@@ -84,42 +84,38 @@
   <ItemGroup>
     <Compile Include="AllTasksParams.cs" />
     <Compile Include="AnalysisEngine.cs" />
-    <Compile Include="AnalysisParams.cs" />
     <Compile Include="AnalysisResults.cs" />
     <Compile Include="Bin.cs" />
     <Compile Include="BinTreeStructure.cs" />
-    <Compile Include="CalibrationFunctions\ByHandCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\ConstantCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\CubicCalibrationFunctionMathNet.cs" />
-    <Compile Include="CalibrationFunctions\DataPoint.cs" />
-    <Compile Include="CalibrationFunctions\IdentityCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\LinearCalibrationFunctionMathNet.cs" />
-    <Compile Include="CalibrationFunctions\NiceTrainingPoint.cs" />
-    <Compile Include="CalibrationFunctions\QuadraticCalibrationFunctionMathNet.cs" />
-    <Compile Include="CalibrationFunctions\RandomForest.cs" />
-    <Compile Include="CalibrationFunctions\SeparateCalibrationFunction.cs" />
-    <Compile Include="CalibrationFunctions\TrainingPoint.cs" />
-    <Compile Include="CalibrationFunctions\TransformFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\ByHandCalibrationFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\CalibrationFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\ConstantCalibrationFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\CubicCalibrationFunctionMathNet.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\DataPoint.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\IdentityCalibrationFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\LinearCalibrationFunctionMathNet.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\NiceTrainingPoint.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\QuadraticCalibrationFunctionMathNet.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\RandomForest.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\SeparateCalibrationFunction.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\TrainingPoint.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\TransformFunction.cs" />
+    <Compile Include="Calibration\CalibrationResults.cs" />
     <Compile Include="ClassicSearchEngine.cs" />
-    <Compile Include="ClassicSearchParams.cs" />
     <Compile Include="ClassicSearchResults.cs" />
     <Compile Include="ClassicSpectrumMatch.cs" />
     <Compile Include="CompactPeptide.cs" />
     <Compile Include="DotSearchMode.cs" />
     <Compile Include="IndexEngine.cs" />
-    <Compile Include="IndexParams.cs" />
     <Compile Include="IndexResults.cs" />
     <Compile Include="IntervalSearchMode.cs" />
     <Compile Include="LocalMs2Scan.cs" />
     <Compile Include="ModernSearchEngine.cs" />
-    <Compile Include="ModernSearchParams.cs" />
     <Compile Include="ModernSearchResults.cs" />
     <Compile Include="ModernSpectrumMatch.cs" />
     <Compile Include="MyAnalysisClass.cs" />
     <Compile Include="MyEngine.cs" />
     <Compile Include="MyInfo.cs" />
-    <Compile Include="MyParams.cs" />
     <Compile Include="MyResults.cs" />
     <Compile Include="NewPsmWithFDR.cs" />
     <Compile Include="OkBin.cs" />
@@ -128,10 +124,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PSMwithTargetDecoyKnown.cs" />
     <Compile Include="SearchMode.cs" />
+    <Compile Include="SingleEngineEventArgs.cs" />
     <Compile Include="SingleFileEventArgs.cs" />
-    <Compile Include="SoftwareLockMassParams.cs" />
-    <Compile Include="SoftwareLockMassRunner.cs" />
-    <Compile Include="TrainingPointsExtractor.cs" />
+    <Compile Include="Calibration\CalibrationEngine.cs" />
     <Compile Include="ValidationException.cs" />
   </ItemGroup>
   <ItemGroup>
