--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A9A105AF-E6C4-40E8-AA7D-5E6FAB72542A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InternalLogic</RootNamespace>
-    <AssemblyName>InternalLogic</AssemblyName>
+    <RootNamespace>InternalLogicEngineLayer</RootNamespace>
+    <AssemblyName>InternalLogicEngineLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
