--- a/MetaMorpheusGUI/MetaMorpheusGUI.csproj
+++ b/MetaMorpheusGUI/MetaMorpheusGUI.csproj
@@ -160,17 +160,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InternalLogic\InternalLogic.csproj">
+    <ProjectReference Include="..\InternalLogic\InternalLogicEngineLayer.csproj">
       <Project>{A9A105AF-E6C4-40E8-AA7D-5E6FAB72542A}</Project>
-      <Name>InternalLogic</Name>
+      <Name>InternalLogicEngineLayer</Name>
     </ProjectReference>
     <ProjectReference Include="..\MetaMorpheusCommandLine\MetaMorpheusCommandLine.csproj">
       <Project>{DD89EF8C-A47A-4C6B-97BF-01B81D48847C}</Project>
       <Name>MetaMorpheusCommandLine</Name>
     </ProjectReference>
-    <ProjectReference Include="..\InternalLogicWithFileIO\InternalLogicWithFileIO.csproj">
+    <ProjectReference Include="..\InternalLogicWithFileIO\InternalLogicTaskLayer.csproj">
       <Project>{04B0EE7D-5FD3-47A5-ABAA-658D177E4229}</Project>
-      <Name>InternalLogicWithFileIO</Name>
+      <Name>InternalLogicTaskLayer</Name>
     </ProjectReference>
     <ProjectReference Include="..\OldInternalLogic\OldInternalLogic.csproj">
       <Project>{D2178D2E-7CBD-48A3-835D-8B13872202FF}</Project>
