--- a/InternalLogicWithFileIO/InternalLogicTaskLayer.csproj
+++ b/InternalLogicWithFileIO/InternalLogicTaskLayer.csproj
@@ -92,6 +92,9 @@
     <Compile Include="CalibrationTask.cs" />
     <Compile Include="GPTMDTask.cs" />
     <Compile Include="ModListForGPTMD.cs" />
+    <Compile Include="ModListForSearch.cs" />
+    <Compile Include="PTMlist.cs" />
+    <Compile Include="RawDataAndResults.cs" />
     <Compile Include="SearchTask.cs" />
     <Compile Include="MyTaskEngine.cs" />
     <Compile Include="MyTaskResults.cs" />
@@ -101,6 +104,7 @@
     </Compile>
     <Compile Include="SearchModeForDisplay.cs" />
     <Compile Include="SingleTaskEventArgs.cs" />
+    <Compile Include="XMLdb.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InternalLogic\InternalLogicEngineLayer.csproj">
