--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -121,7 +121,9 @@
     <Compile Include="OkBin.cs" />
     <Compile Include="ParentSpectrumMatch.cs" />
     <Compile Include="ProgressEventArgs.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" >
+      <SonarQubeExclude >true </SonarQubeExclude >
+    </Compile>
     <Compile Include="PSMwithTargetDecoyKnown.cs" />
     <Compile Include="SearchMode.cs" />
     <Compile Include="SingleEngineEventArgs.cs" />
