--- a/InternalLogicWithFileIO/InternalLogicTaskLayer.csproj
+++ b/InternalLogicWithFileIO/InternalLogicTaskLayer.csproj
@@ -86,14 +86,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalibrateTask\MyCalibrationTaskResults.cs" />
+    <Compile Include="CalibrationTask\MyCalibrationTaskResults.cs" />
     <Compile Include="EverythingRunner\EverythingRunnerResults.cs" />
     <Compile Include="GPTMDTask\MyGPTMDTaskResults.cs" />
     <Compile Include="EverythingRunner\EverythingRunnerEngine.cs" />
-    <Compile Include="CalibrateTask\CalibrationTask.cs" />
+    <Compile Include="CalibrationTask\CalibrationTask.cs" />
     <Compile Include="GPTMDTask\GPTMDTask.cs" />
     <Compile Include="GPTMDTask\ModListForGPTMDTask.cs" />
-    <Compile Include="CalibrateTask\ModListForCalibrationTask.cs" />
+    <Compile Include="CalibrationTask\ModListForCalibrationTask.cs" />
     <Compile Include="SearchTask\ModListForSearchTask.cs" />
     <Compile Include="ModList.cs" />
     <Compile Include="SearchTask\MySearchTaskResults.cs" />
