--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -89,9 +89,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExclusionsTest.cs" />
     <Compile Include="MyEngineTest.cs" />
     <Compile Include="AnalysisEngineTest.cs" />
-    <Compile Include="ExclusionsTest.cs" />
+    <Compile Include="SearchModesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
     </Compile>
