--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 - xbuild /p:Configuration=TestAndReleaseTravis MetaMorpheus.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 - tar -zcvf MonoCommandLine.tar.gz -C MetaMorpheusCommandLine/bin/Release .
+- mono ./MetaMorpheusCommandLine/bin/Release/MetaMorpheusCommandLine.exe
 deploy:
   provider: releases
   api_key:
