--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="SetUpTests.cs" />
     <Compile Include="GPTMDengineTest.cs" />
+    <Compile Include="IndexEngineTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
