Add open search mode

--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -117,6 +117,7 @@
     </Compile>
     <Compile Include="ProteinGroup.cs" />
     <Compile Include="PSMwithTargetDecoyKnown.cs" />
+    <Compile Include="SearchModes\OpenSearchMode.cs" />
     <Compile Include="SearchModes\SearchMode.cs" />
     <Compile Include="SearchModes\SingleAbsoluteAroundZeroSearchMode.cs" />
     <Compile Include="SearchModes\SinglePpmAroundZeroSearchMode.cs" />
