--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -126,7 +126,7 @@
     <Compile Include="Calibration\CalibrationEngine.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Databases\elements.dat">
+    <None Include="elements.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
@@ -138,10 +138,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Databases\ptmlist.txt">
+    <Content Include="ptmlist.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Databases\unimod_tables.xml">
+    <Content Include="unimod_tables.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
