--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Calibration\CalibrationFunctions\DataPoint.cs" />
     <Compile Include="Calibration\CalibrationFunctions\IdentityCalibrationFunction.cs" />
     <Compile Include="Calibration\CalibrationFunctions\LinearCalibrationFunctionMathNet.cs" />
-    <Compile Include="Calibration\CalibrationFunctions\NiceTrainingPoint.cs" />
+    <Compile Include="Calibration\CalibrationFunctions\LabeledDataPoint.cs" />
     <Compile Include="Calibration\CalibrationFunctions\QuadraticCalibrationFunctionMathNet.cs" />
     <Compile Include="Calibration\CalibrationFunctions\SeparateCalibrationFunction.cs" />
     <Compile Include="Calibration\CalibrationFunctions\TrainingPoint.cs" />
