--- a/InternalLogic/InternalLogicEngineLayer.csproj
+++ b/InternalLogic/InternalLogicEngineLayer.csproj
@@ -151,6 +151,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="unimod_tables.xml">
+      <SonarQubeExclude>true</SonarQubeExclude>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
