--- a/OldInternalLogic/OldInternalLogic.csproj
+++ b/OldInternalLogic/OldInternalLogic.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -94,7 +95,6 @@
     <Compile Include="ModificationType.cs" />
     <Compile Include="PeptideFragmentMasses.cs" />
     <Compile Include="PeptideWithPossibleModifications.cs" />
-    <Compile Include="PeptideSpectrumMatch.cs" />
     <Compile Include="PeptideWithSetModifications.cs" />
     <Compile Include="ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
